# geolytics-dictionary

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  docker-compose.yml  gso-cards.html  index-cards.html  index.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  eval.yml  lint.yml  mcp.yml  pre-commit.yml  release.yml  test-langgraph.yml  test-node.yml  test-python.yml  validate-ontology.yml  validate.yml
ai/: graph-schema-sparql.md  graph-schema.md  ontology-map.json  rag-corpus.jsonl  system-prompt-en.md  system-prompt-ptbr.md  text2cypher-fewshot.jsonl  text2sparql-fewshot.jsonl
api/v1/: acronyms.json  anp-osdu-wellstatus-map.json  anp-poco-categoria.json  anp-poco-resultado.json  anp-uf.json  axon-manifest.json  cgi-fault-type.json  cgi-stratigraphic-rank.json  datasets.json  entities.json  geobrain-shapes.ttl  geobrain-vocab.ttl  geolytics-shapes.ttl  geolytics-vocab.ttl  geomechanics.json  gsmlbh-properties.json  index.json  ontology-layers-shapes.ttl  prodml-rdf-crosswalk.json  search-index.json  seismic.json  sosa-qudt-alignment.json  terms.json  validate-rules.json  well-attributes.json  witsml-rdf-crosswalk.json
data/: .gso-extract-stamp  acronyms.json  anp-bacia-sedimentar.json  anp-poco-tipo.json  cgi-contact-type.json  cgi-geologic-time.json  cgi-lithology.json  cgi-osdu-lithology-map.json  datasets.json  entity-graph.json  extended-terms.json  fracture_to_gso.json  full.json  geobrain-shapes.ttl  geobrain.ttl  geolytics-shapes.ttl  geolytics-vocab.ttl  geolytics.ttl  geomechanics-1d-curves-crosswalk.json  geomechanics-corporate-crosswalk.json  geomechanics-corporate.json  geomechanics-corporate.v1.5.0.bak.json  geomechanics-fractures.json  geomechanics-wsm-merge.json  geomechanics.json  gestao-projetos-parcerias.json  glosis-extraction.md  glossary.json  gso-contacts.json  gso-faults.json  gso-folds.json  gso-foliations.json  gso-lineations.json  modules-extended.json  ontological_role_audit.json  ontology-layers-shapes.ttl  ontology-roles.json  ontology-types.json  ontopetro.json  operacoes-geologicas-servicos.json  (+11 more)
data/axon/: _template.json  exploracao.json
data/glosis/: README.md  cgi-version-strategy.json  geolytics-ep-backbone.ttl  geolytics-glosis-ext.ttl  geolytics-modules.ttl  geolytics-petrography-i18n.ttl  geolytics-shapes.ttl  geolytics-units.ttl  inspire-geomorph-codelists.json  lithology-crosswalk-cgi.json  lithology-crosswalk-inspire-geomorph.json  lithology-crosswalk-inspire-litho.json  lithology.json  petrography-codelists.json  pvt-procedures.ttl  w3id-registration-draft.md
data/raw/: README.md  ontopetro.txt
docs/: ACRONYMS.md  ARCHITECTURE.md  AXON_GLOSSARY_SCHEMA.md  BRAZIL_SPECIFIC.md  CGI.md  CI.md  CONTRIBUTING.md  ENTITIES.md  EXTERNAL_STANDARDS.md  GEOMECHANICS.md  GRAPHRAG.md  GWML2.md  INDEX.md  ONTOLOGY.md  ONTOLOGY_LAYERS.md  ONTOLOGY_PREDICATES.md  SEISMIC.md  SHACL.md  SWEET.md  USE_CASES.md  WITSML.md
docs/glosis/: index.md
eval/: README.md  baseline.json  golden-set.jsonl  metrics.py  report.py  requirements.txt  run.py
notebooks/: 01_explore_graph.ipynb  02_rag_with_validator.ipynb  03_langgraph_multiagent.ipynb  04_geomec_qa.ipynb  _build_notebooks.py  requirements.txt
python/: MANIFEST.in  README.md  build_data.py  pyproject.toml
python/geobrain/: __init__.py  cli.py  crosswalk.py  data.py  dictionary.py  graph.py  lithology.py  rag.py  sweet.py  validator.py
python/geobrain/_data/: acronyms.json  cgi-deformation-style.json  cgi-lithology.json  entity-graph.json  extended-terms.json  full.json  geomechanics-fractures.json  geomechanics.json  glossary.json  gwml2.json  layer1-layer1b-equivalence.json  ontology-types.json  osdu-gso-crosswalk.json  osdu-mapping.json  prodml-rdf-crosswalk.json  rag-corpus.jsonl  seismic-acquisition.json  seismic-inversion-attributes.json  sweet-alignment.json  sweet-modules.json  systems.json  taxonomies.json
python/geolytics_dictionary/: __init__.py  cli.py  crosswalk.py  data.py  dictionary.py  graph.py  rag.py
python/geolytics_dictionary/_data/: datasets.json  entity-graph.json  ontology-map.json  ontology-types.json  pvt-dictionary.json  seismic-processing.json
python/tests/: test_crosswalk.py  test_data.py  test_dictionary.py  test_geomec_corporate_shacl.py  test_graph.py  test_lithology.py  test_rag.py  test_sweet.py  test_validator.py
scripts/: acronyms-source.txt  add-frente-f-entities-2026-05-02.py  add-labtest-shacl-2026-05-02.py  apply-translations.js  apply-vocabulary-decisions-2026-05-02.py  audit-ontological-roles.py  axon-manifest-loader.js  backfill-geomec-corporate.py  build-acronyms.js  build-docs.sh  build-neo4j.js  build-ontology-doc.js  build-validate-manifest.js  cards-html.js  check-regen.sh  generate.js  geomec-corporate-to-ttl.py  gestao-projetos-parcerias-nodes.js  gso-extract.js  ontology-alignment.js  ontopetro-data.js  operacoes-geologicas-nodes.js  osdu-canonical.js  osdu-extra-nodes.js  requirements.txt  seed-translations.js  semantic-validator.js  sweet-expand.js  threew-data.js  ttl-serializer.js  validate-cli.js  validate-entity-graph.js  validate-geomec-corporate.py  validate-shacl.js  validate-shacl.py  validate.py  witsml-to-rdf.js
tests/: test_axon_manifest.test.js  test_geomec_corporate_shacl.py  test_ontology_layers_shacl.py  test_rag_ontology_chunks.test.js  test_shacl_warnings_baseline.py  test_threew_shacl.py  validator.test.js
wiki/: Architecture.md  Contributing.md  Data-Files.md  ETL-Pipeline.md  FAQ.md  Getting-Started.md  Glossary.md  Home.md  Knowledge-Graph.md  LangGraph-Agent.md  MCP-Server.md  Neo4j-Setup.md  Python-Package.md  RAG-Corpus.md  README.md  REST-API.md  SHACL-Validation.md  SPE-Volve-Integration.md  Semantic-Layers.md  Semantic-Validator.md  Use-Cases.md  What-is-GeoBrain.md  _Footer.md  _Sidebar.md  publish.sh
(+102 files in other folders)
