[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geobrain"
dynamic = ["version"]
description = "Python SDK for GeoBrain — O&G domain dictionary — terms, ontology graph, semantic validator, and SWEET expander."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Thiago Lopes", email = "thiagoflc@gmail.com" },
]
keywords = [
  "oil-and-gas", "ontology", "knowledge-graph", "dictionary",
  "geoscience", "petroleum", "nlp", "semantic-validation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
graph = [
  "networkx>=3.0",
]
rag = [
  "rank-bm25>=0.2.2",
]
validator = [
  "pyshacl>=0.25.0",
  "rdflib>=7.0.0",
  "owlrl>=6.0.2",
]
scripts = [
  "pyshacl>=0.25.0",
  "rdflib>=7.0.0",
  "owlrl>=6.0.2",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "networkx>=3.0",
  "rank-bm25>=0.2.2",
  "pyshacl>=0.25.0",
  "rdflib>=7.0.0",
  "owlrl>=6.0.2",
  "pre-commit>=3.5",
  "ruff>=0.7.0",
]

[project.scripts]
geobrain-validate = "geobrain.cli:main"

[project.urls]
Homepage = "https://github.com/thiagoflc/geobrain"
Repository = "https://github.com/thiagoflc/geobrain"
Issues = "https://github.com/thiagoflc/geobrain/issues"

[tool.hatch.version]
path = "geobrain/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["geobrain"]

[tool.hatch.build.targets.wheel.force-include]
"geobrain/_data" = "geobrain/_data"

[tool.hatch.build.targets.sdist]
include = [
  "/geobrain",
  "/MANIFEST.in",
  "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py310"
# Scope ruff to the maintained SDK + tests. Legacy scripts/ and one-shot
# migrations/ are checked for syntax only (see .github/workflows/lint.yml)
# and intentionally exempt from the strict ruleset.
extend-exclude = [
  "geobrain/_data",
  "build",
  "dist",
  "../scripts",
  "../scripts/migrations",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line-length handled by formatter
  "B008",  # function calls in defaults are common in this codebase
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
source = ["geobrain"]
omit = ["geobrain/_data/*", "geobrain/_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
